# xls32-fpga-synth

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  pyproject.toml
docs/: gen_dsp_diagrams.py
firmware/: top.bit  top.bit.md
host/: analyze.py  analyze_fft.py  filter_demo.py  fx_diag.py  play.py  record_wav.py  uartaudio.py
host/demos/: demo.py  demo_leds.py  demo_m10.py  demo_m11.py  demo_m13.py  demo_m6b.py  demo_m9.py  demo_reverb.py  demo_tremolo.py  demo_unison.py
phase0-proc-prototype/: README.md  basys3.xdc  top.v  uart_proc.v  uart_proc.x
presetgen/: build_demos.py  build_presets.py  calibrate.py  calibrate_bank.py  engine.py  freesound.py  loss.py  make_fm_bank.py  nsynth.py  params.py  search.py  soundfont.py  validate_hw.py
rtl/: basys3.xdc  basys3_nextpnr.xdc  build_vivado.tcl  fix_verilog.py  gen_lut.py  synth.x  tb.v  tb_echo.v  tb_fx_stub.v  tb_io.v  tb_reverb_rail.v  tb_stereo.v  tb_stereo2.v  tb_top.v  top.v
scripts/: build.sh  demo_video.sh  make_mp4.sh  remote_build.sh  spectro.sh  verify.sh  vmbuild.sh  vmbuild_nextpnr.sh  vmbuild_vivado.sh
test/: README.md  analysis.py  captions.py  cases_basic.py  cases_integration.py  cases_stress.py  harness.py  run_tests.py  video.py
webui/: presets_fm.json  presets_nsynth.json  presets_soundfont.json  server.py  synthspec.py
webui/static/: app.js  demos.json  index.html  style.css  worklet.js
